fix: Add white-space nowrap to navigation links to prevent text wrapping

--- a/public/static/commons-components.css
+++ b/public/static/commons-components.css
@@ -60,6 +60,7 @@
   transition: color var(--transition-fast);
   position: relative;
   padding-bottom: 4px;
+  white-space: nowrap;
 }
 
 .commons-nav-link::after {
